# revshell

./: .gitattributes  .gitignore  README.md  pyproject.toml
revshell/: __init__.py  __main__.py  _completions.py  util.py
revshell/cmd/: unix.py
revshell/php/: __init__.py
revshell/php/cmd/: __init__.py  unix.py
revshell/windows/: __init__.py  powershell.py
